--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ docs/.sass-cache
 docs/.jekyll-cache
 docs/.jekyll-metadata
 docs/vendor
+**/__pycache__/*
+venv/
+.vscode/
+.DS_Store
+config.py
+*.egg-info/
+dist/
+.env
+build/
+service-names-port-numbers.xml
