--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ name = "portdb"
 
 # S3; see https://gocloud.dev/howto/blob/#s3
 # For S3-compatible endpoints, see https://gocloud.dev/howto/blob/#s3-compatible
-URL = "s3://portdb.yaleman.org?region=us-east-1"
+# URL = "s3://portdb.yaleman.org?region=us-east-1"
 
 [[deployment.matchers]]
 #  Cache static assets for 1 year.
