--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ python = "^3.9"
 httpx = "^0.22.0"
 pelican = {extras = ["markdown"], version = "^4.7.2"}
 ghp-import = "^2.1.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.13.9"
 pytest = "^7.1.2"
 black = "^22.3.0"
 mypy = "^0.960"
+types-requests = "^2.27.29"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
