github-linter.fix_copy_poetry_to_project updating pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,21 @@
 name = "portdb_yaleman_org"
 version = "0.0.1"
 description = ""
-authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
+authors = [
+    "James Hodgkinson <james@terminaloutcomes.com>",
+]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pelican = {extras = ["markdown"], version = "^4.8.0"}
 ghp-import = "^2.1.0"
 requests = "^2.30.0"
+
+[tool.poetry.dependencies.pelican]
+extras = [
+    "markdown",
+]
+version = "^4.8.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.17.3"
@@ -19,5 +26,16 @@ mypy = "^1.2"
 types-requests = "^2.30.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = [
+    "poetry-core>=1.0.0",
+]
 build-backend = "poetry.core.masonry.api"
+
+[project]
+name = "portdb_yaleman_org"
+description = ""
+license = "MIT"
+version = "0.0.1"
+authors = [
+    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
+]
