--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -1,6 +1,7 @@
-name: Deploy
+---
+name: Deploy to Github Pages
 
-on:
+"on":
   push:
     branches:
       - main
@@ -12,19 +13,12 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: 'true'
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.10'
     - name: Running pelican
       run: |
         python --version
         python -m pip install --quiet --no-cache-dir --upgrade poetry
         poetry install --no-dev
-    - name: Running github-deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GH_PAGES_CNAME: portdb.yaleman.org
-      run: |
-
-        ./github-deploy.sh
