--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,11 @@ black = "^23.3.0"
 mypy = "^1.2"
 types-requests = "^2.30.0"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.0.265"
+mypy = "^1.2.0"
+black = "^23.3.0"
+
 [build-system]
 requires = [
     "poetry-core>=1.0.0",
