--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -23,4 +23,4 @@ jobs:
           python --version
           python -m pip install --quiet --no-cache-dir --upgrade poetry
           poetry install
-          poetry run mypy $(basename $(pwd) | sed -E 's/-/_/g') tests/
+          poetry run mypy *.py tests/
