--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,6 @@ version = "0.0.1"
 authors = [
     { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
 ]
+
+[tool.ruff]
+line-length = 200
