--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,5 +22,5 @@ jobs:
         run: |
             python -m pip install --quiet --no-cache-dir --upgrade poetry
             poetry install
-            poetry run ruff *.py
-            poetry run ruff tests/
+            poetry run ruff check *.py
+            poetry run ruff check tests/
